envoy-config/envoy-hello-gateway.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10001

static_resources:
  listeners:
    - name: gateway_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: hello_route
                  virtual_hosts:
                    - name: gateway
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: gateway
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/dev/stdout"
                http_filters:
                  - name: envoy.router
    - name: greeter_listener
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 50051
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: egress_http
                route_config:
                  name: greeter_route
                  virtual_hosts:
                    - name: greeter
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: greeter
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/dev/stdout"
                http_filters:
                  - name: envoy.router
  clusters:
    - name: gateway
      connect_timeout: 0.25s
      type: static
      lb_policy: round_robin
      health_checks:
        - timeout: 5s
          interval: 10s
          unhealthy_threshold: 2
          healthy_threshold: 2
          tcp_health_check: {}
      hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8000
    - name: greeter
      http2_protocol_options: {}
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      health_checks:
        - timeout: 5s
          interval: 10s
          unhealthy_threshold: 2
          healthy_threshold: 2
          tcp_health_check: {}
      hosts:
        - socket_address:
            address: hello-greeter-service
            port_value: 10000
