envoy-config/envoy-hello-py.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10001

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: hello-py-route
                  virtual_hosts:
                    - name: hello-py-service
                      domains:
                        - "*"
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: hello-py-service
                http_filters:
                  - name: envoy.router
  clusters:
    - name: hello-py-service
      connect_timeout: 0.25s
      type: static
      lb_policy: round_robin
      health_checks:
        - timeout: 5s
          interval: 10s
          unhealthy_threshold: 2
          healthy_threshold: 2
          tcp_health_check: {}
      hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8000
